# mealhow-sdk

./: .flake8  .pre-commit-config.yaml  README.md  index.yaml  pyproject.toml  requirements.txt  setup.cfg
scripts/: build_and_upload
src/meal_plan_generator/: __init__.py  external_api.py  helpers.py  main.py  parsers.py
src/meal_plan_sdk/: consts.py  external_api.py  helpers.py
src/meal_plan_sdk/datastore_models/: meal.py  meal_plan.py  shopping_list.py
src/mealhow_sdk/: __init__.py  consts.py  core.py  enums.py  external_api.py  helpers.py  main.py  parsers.py  prompt_templates.py
src/mealhow_sdk/clients/: __init__.py  cloud_storage.py  http.py
src/mealhow_sdk/datastore_models/: __init__.py  base.py  meal.py  meal_plan.py  shopping_list.py  user.py
