[metadata]
name = meal_plan_generator
version = 0.1.3
author = Vitalii Vinnychenko
author_email = vitalii@mealhow.ai
url = https://github.com/MealHow/meal-plan-generator.git
[options]
python_requires = >=3.6
packages = find:
package_dir =
    = src
install_requires =
    openai==0.27.*
    asyncio==3.4.*

[options.packages.find]
where = src
