[metadata]
name = meal_plan_generator
version = 0.1.1
author = Vitalii Vinnychenko
author_email = vitalii@mealhow.ai
url = https://github.com/MealHow/meal-plan-generator.git
[options]
python_requires = >=3.6
packages = find:
package_dir =
    = src
install_requires =
    openai==0.28.1
    asyncio==3.4.3

[options.packages.find]
where = src
