[metadata]
name = mealhow_sdk
version = 0.2.17
author = Vitalii Vinnychenko
author_email = vitalii@mealhow.ai
url = https://github.com/MealHow/mealhow-sdk.git
[options]
python_requires = >=3.6
packages = find:
package_dir =
    = src
install_requires =
    openai==0.28.1
    asyncio==3.4.3
    google-cloud-ndb==2.2.2
    gcloud-aio-storage==9.0.0

[options.packages.find]
where = src
